--- a/src/home-insurance/22-Collectables-details-collapsed.html
+++ b/src/home-insurance/22-Collectables-details-collapsed.html
@@ -516,6 +516,22 @@
                                                                             </span>
                                                                         </div>
                                                                     </div>
+                                                                    <div class="col-12 ">
+                                                                        <p class="text-black  fs-16 fw-500">Ownership</p>
+                                                                        <div class="d-flex align-items-center justify-content-start mt-1">
+                                                                           
+                                                                            <label class="radio-box w-auto me-4" for="ownership1">
+                                                                                <input class="radio-box-control" type="radio" name="ownership"
+                                                                                    value="" id="ownership1">
+                                                                                <span class="radio-box-custom">OWNED</span>
+                                                                            </label>
+                                                                            <label class="radio-box w-auto" for="ownership2">
+                                                                                <input class="radio-box-control" checked type="radio" name="ownership"
+                                                                                    value="" id="ownership2">
+                                                                                <span class="radio-box-custom">LEASED</span>
+                                                                            </label>
+                                                                        </div>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div><!-- /accordion-item -->
