fix mobile view

--- a/src/home-insurance/1-address.html
+++ b/src/home-insurance/1-address.html
@@ -181,7 +181,7 @@
                                                 <input class="form-control addMain" type="text"
                                                     placeholder="Street Address">
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
@@ -198,7 +198,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
@@ -215,7 +215,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <input type="text" placeholder="ZIP Code" class="form-control">
                                                 </div>
@@ -245,27 +245,20 @@
 
 
                                             <div class="col-md-12 col-12">
-                                                <input class="form-control addMain" type="text"
-                                                    placeholder="Street Address">
+                                                <input class="form-control addMain" type="text" placeholder="Street Address">
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="f-group max-width-100">
-
-                                                    <div class="f-dropdown selectDropdown"><select
-                                                            class="f-control f-dropdown" placeholder="City"
-                                                            id="selectCity">
+                                                    <div class="f-dropdown selectDropdown">
+                                                        <select class="f-control f-dropdown" placeholder="City" id="selectCity">
                                                             <option value="">Select City</option>
-                                                            <option value="1">city 1
-                                                            </option>
-                                                            <option value="2">city 2
-                                                            </option>
-
+                                                            <option value="1">city 1</option>
+                                                            <option value="2">city 2</option>
                                                         </select>
-
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
@@ -282,7 +275,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <input type="text" placeholder="ZIP Code" class="form-control">
                                                 </div>
