--- a/src/home-insurance/1.4-new-purchase.html
+++ b/src/home-insurance/1.4-new-purchase.html
@@ -62,30 +62,9 @@
                     </div>
                     <a class="navbar-brand d-md-none m-0" href="#"><img src="../images/logo.svg" alt=""></a>
                     <div class="d-flex align-items-center justify-content-center">
-                        <!-- <select class="vodiapicker">
-                            <option value="en" class="test" data-thumbnail="./images/us_flag.svg">
-                                English</option>
-                            <option value="au"
-                                data-thumbnail="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/NYCS-bull-trans-B.svg/480px-NYCS-bull-trans-B.svg.png">
-                                Engllish </option>
-
-
-                        </select> -->
-
-                        <!-- <div class="lang-select me-3 pe-2">
-                            <button class="btn-select" value=""></button>
-                            <div class="b">
-                                <ul id="a"></ul>
-                            </div>
-                        </div> -->
-
-
-                        <!-- https://codepen.io/aaroniker/pen/XxBjKN?editors=0100-->
-
                         <div class="f-group me-3 pe-2">
-
                             <select class="f-control f-dropdown" placeholder="Please choose 2">
-                                <option value=""> </option>
+                                <option value=""></option>
                                 <option value="1" selected="selected" data-image="../images/us_flag.svg">English
                                 </option>
                                 <option value="2"
@@ -166,8 +145,7 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne
-                            </p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
                         <h3 class="title  text-center">Property Details</h3>
                         <div class="contain-wrapper-sm">
@@ -177,8 +155,7 @@
                                     <div class="row">
                                         <div class="col-6">
                                             <label class="radio-inline w-100 d-block radio-btn text-center" for="newPurchase1">
-                                                <input class="radio-control" type="radio" name="newPurchase"
-                                                    value="" id="newPurchase1" checked="">
+                                                <input class="radio-control" type="radio" name="newPurchase" value="" id="newPurchase1" checked="">
                                                 <span class="radio-custom"></span>
                                                 <span class="radio-label fs-14 w-100">Yes </span>
                                             </label>
