--- a/src/home-insurance/1.5-property-cost.html
+++ b/src/home-insurance/1.5-property-cost.html
@@ -180,7 +180,7 @@
                                                 $
                                             </span>
                                         </span>
-                                        <input type="text" class="" id="Cost" placeholder="Cost" />
+                                        <input type="text" class="" id="Cost" placeholder="Enter Cost" />
                                     </div>
                                 </div>
                                 <div class="blue-light-box bg-white">
@@ -191,7 +191,7 @@
                                                 <input class="form-control addMain" type="text"
                                                     placeholder="Street Address">
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
@@ -208,11 +208,11 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
-                                                            class="f-control f-dropdown" placeholder="state"
+                                                            class="f-control f-dropdown" placeholder="State"
                                                             id="selectState">
                                                             <option value="">Select State</option>
                                                             <option value="1">State 1
@@ -225,7 +225,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-4">
+                                            <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <input type="text" placeholder="ZIP Code" class="form-control">
                                                 </div>
