--- a/src/home-insurance/2-renovation.html
+++ b/src/home-insurance/2-renovation.html
@@ -166,17 +166,12 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne
-                            </p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
                         <h3 class="title  text-center">Will you be doing any renovations</h3>
                         <div class="contain-wrapper-sm d-flex justify-content-center">
-                           
-                            
-                            <button class="btn btn-outline-primary mt-4 mt-sm-0 mx-3"><span>No</span>
-                            </button>
-                           <button type="submit" class="btn btn-primary  mx-3 mt-4 mt-sm-0"><span>Yes</span>
-                            </button>
+                            <button class="btn btn-outline-primary mt-4 mt-sm-0 mx-3"><span>No</span></button>
+                            <button type="submit" class="btn btn-primary  mx-3 mt-4 mt-sm-0"><span>Yes</span></button>
                     </div>
                 </div>
             </div>
