--- a/src/home-insurance/3-renovation-or-cunstruction.html
+++ b/src/home-insurance/3-renovation-or-cunstruction.html
@@ -166,11 +166,9 @@
                     <div class="container mt-5 pt-5">
                         <div class="text-center mb-4 user-info">
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
-                            <p class="user-welcome mt-2">Hey! My Name is Anne
-                            </p>
+                            <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
                         <h3 class="title  text-center">Renovations</h3>
-                        
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
                                 <div class="blue-light-box bg-white">
@@ -202,13 +200,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span>
-                                </button>
+                                <button type="submit" class="btn btn-primary mx-auto mt-4"><span>Continue</span></button>
                             </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <script src="../js/jquery.min.js"></script>
