--- a/src/home-insurance/4-rental-info.html
+++ b/src/home-insurance/4-rental-info.html
@@ -180,20 +180,20 @@
                                         <div class="row g-3">
                                             <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" ># of units rented out?</label>
-                                                    <input type="text" placeholder="No. of units" class="form-control">
+                                                    <label for="" class="fs-18 fw-normal" ># of units rented out?</label>
+                                                    <input type="text" placeholder="No. of units" class="form-control" value="5">
                                                 </div>
                                             </div>
                                             <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold" >Total monthly Income for all units combined?</label>
+                                                    <label for="" class="fs-18 fw-normal" >Total monthly Income for all units combined?</label>
                                                     <div class="input-group form-control px-0">
                                                         <span class="input-group-append ">
                                                             <span class="input-group-text border-0 bg-white d-block pe-0">
                                                                 $
                                                             </span>
                                                         </span>
-                                                        <input type="text" class="" id="Enter amount" placeholder="Enter amount" />
+                                                        <input type="text" class="" id="Enter amount" placeholder="Enter amount" value="500"/>
                                                     </div>
                                                 </div>
                                             </div>
