--- a/src/home-insurance/6-anyone-living.html
+++ b/src/home-insurance/6-anyone-living.html
@@ -171,12 +171,8 @@
                         </div>
                         <h3 class="title  text-center">Will anyone be living here within 30 days of this policy start date?</h3>
                         <div class="contain-wrapper-sm d-flex justify-content-center">
-                           
-                            
-                            <button class="btn btn-outline-primary mt-4 mt-sm-0 mx-3"><span>No</span>
-                            </button>
-                           <button type="submit" class="btn btn-primary  mx-3 mt-4 mt-sm-0"><span>Yes</span>
-                            </button>
+                            <button class="btn btn-outline-primary mt-4 mt-sm-0 mx-3"><span>No</span></button>
+                            <button type="submit" class="btn btn-primary  mx-3 mt-4 mt-sm-0"><span>Yes</span></button>
                     </div>
                 </div>
             </div>
