--- a/src/home-insurance/8-personal-info.html
+++ b/src/home-insurance/8-personal-info.html
@@ -170,7 +170,6 @@
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
                         <h3 class="title  text-center">Ownership Details</h3>
-                        
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
                                 <div class="">
@@ -183,17 +182,12 @@
                                                 <div class="f-group max-width-100">
                                                     <div class="f-dropdown selectDropdown">
                                                         <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership"
-                                                            id="1">
+                                                            placeholder="Select the type of ownership" id="1">
                                                             <option value="">Select the type of ownership</option>
-                                                            <option value="1">Individual
-                                                            </option>
-                                                            <option value="2">Corporation
-                                                            </option>
-                                                            <option value="3">LLC
-                                                            </option>
-                                                            <option value="4">Trust
-                                                            </option>
+                                                            <option value="1">Individual</option>
+                                                            <option value="2">Corporation</option>
+                                                            <option value="3">LLC</option>
+                                                            <option value="4">Trust</option>
                                                         </select>
                                                     </div>
                                                 </div>
