--- a/src/home-insurance/7-property-payment-info.html
+++ b/src/home-insurance/7-property-payment-info.html
@@ -219,7 +219,7 @@
                                                                         <input class="form-control addMain" type="text"
                                                                             placeholder="Street Address">
                                                                     </div>
-                                                                    <div class="col-4">
+                                                                    <div class="col-sm-4">
                                                                         <div class="f-group max-width-100">
 
                                                                             <div class="f-dropdown selectDropdown">
@@ -237,7 +237,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-4">
+                                                                    <div class="col-sm-4">
                                                                         <div class="f-group max-width-100">
 
                                                                             <div class="f-dropdown selectDropdown">
@@ -256,7 +256,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-4">
+                                                                    <div class="col-sm-4">
                                                                         <div class="form-group">
                                                                             <input type="text" placeholder="ZIP Code"
                                                                                 class="form-control">
@@ -285,7 +285,7 @@
                                                             <div class="accordion-body pt-0">
                                                                 <div class="row g-3">
                                                                     
-                                                                    <div class="col-6 position-relative z-index-2">
+                                                                    <div class="col-sm-6 position-relative z-index-2">
                                                                         <div class="f-group max-width-100">
                                                                             <div class="f-dropdown selectDropdown">
                                                                                 <select class="f-control f-dropdown"
@@ -306,7 +306,7 @@
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="form-group">
                                                                             <input type="text"
                                                                                 placeholder="Loan number (optional)"
