--- a/src/home-insurance/8.3-personal-info-LLC.html
+++ b/src/home-insurance/8.3-personal-info-LLC.html
@@ -314,7 +314,7 @@
                                                             data-bs-parent="#accordionPolicy">
                                                             <div class="accordion-body pt-0">
                                                                 <div class="row g-3">
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="form-group">
                                                                             <input type="text"
                                                                                 placeholder="First name"
@@ -322,7 +322,7 @@
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="form-group">
                                                                             <input type="text"
                                                                                 placeholder="Last Name"
@@ -331,7 +331,7 @@
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="input-group date form-control px-0"
                                                                             id="datepicker1">
                                                                             <input type="text" class="" id="date"
@@ -347,7 +347,7 @@
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="f-group max-width-100">
                                                                             <div class="f-dropdown selectDropdown">
                                                                                 <select class="f-control f-dropdown"
