--- a/src/home-insurance/8.4-personal-info-trust.html
+++ b/src/home-insurance/8.4-personal-info-trust.html
@@ -367,21 +367,21 @@
                                                             data-bs-parent="#accordionPolicy">
                                                             <div class="accordion-body pt-0">
                                                                 <div class="row g-3">
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="form-group">
                                                                             <input type="text" placeholder="First name"
                                                                                 class="form-control" value="Alia">
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="form-group">
                                                                             <input type="text" placeholder="Last Name"
                                                                                 class="form-control" value="Shastri">
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="input-group date form-control px-0"
                                                                             id="datepicker1">
                                                                             <input type="text" class="" id="date"
@@ -397,7 +397,7 @@
                                                                         </div>
                                                                     </div>
 
-                                                                    <div class="col-6">
+                                                                    <div class="col-sm-6">
                                                                         <div class="f-group max-width-100">
                                                                             <div class="f-dropdown selectDropdown">
                                                                                 <select class="f-control f-dropdown"
