commercial auto policy summary page

--- a/src/commercial-auto/15.1-policy-summary.html
+++ b/src/commercial-auto/15.1-policy-summary.html
@@ -664,7 +664,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
@@ -960,7 +960,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
@@ -1201,7 +1201,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
@@ -1553,7 +1553,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
