--- a/src/commercial-auto/15-policy-summary.html
+++ b/src/commercial-auto/15-policy-summary.html
@@ -618,7 +618,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
@@ -970,7 +970,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
@@ -1322,7 +1322,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
@@ -1674,7 +1674,7 @@
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         <div class="form-group">
-                                                                            <label class="mb-1 fs-14 text-black fw-normal">Miles Driven Yearly</label>
+                                                                            <label class="mb-1 fs-14 text-black fw-normal">Vehicle Weight</label>
                                                                             <div class="input-group form-control px-0">
                                                                                 <input type="text" placeholder="Vehicle Weight" />
                                                                                 <span class="input-group-append ">
